# magic-card-file

./: stack.yaml
card/: card.cabal
card/src/Data/: Card.hs
cockatricize/: cockatricize.cabal
cockatricize/src/: Main.hs
imagine/: imagine.cabal
imagine/src/: Main.hs  Util.hs
imagine/src/Util/: Map.hs
sgml/: sgml.cabal
sgml/src/Data/: Sgml.hs
