name:                card
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/strake/card#readme
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2016 M Farkas-Dyck
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Card
  other-modules:       Util.Regex
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.11 && < 0.13
                     , regex-applicative
                     , txt
  default-language:    Haskell2010
  ghc-options:         -Wall
