name:                cockatricize
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/strake/card#readme
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2016 M Farkas-Dyck
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable cockatricize
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , card
                     , sgml
                     , regex-applicative
                     , split
  default-language:    Haskell2010
